# obsidian-autolink

./: README.md  clear_kg.py  pyproject.toml  test_note_linking.py
src/obsidian_autolink/: __init__.py  config.py  knowledge_graph.py  main.py
