[project]
name = "obsidian-autolink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.107.2",
    "neo4j>=5.28.2",
    "neo4j-graphrag>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=14.1.0",
]

[project.scripts]
obsidian-autolink = "obsidian_autolink.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
